<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="20dp">

    <ImageView
        android:id="@+id/overlapImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:adjustViewBounds="true"
        android:src="@drawable/commu_logo" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="-3dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="1dp"
        android:gravity="top|center"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome"
            android:textAllCaps="true"
            android:textColor="#46C6BE"
            android:textSize="30sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:textColor="#46C6BE"
            android:textColorLink="#FFFFFF"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="13sp" />

    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/change_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/logout"
        android:layout_marginBottom="10dp"
        app:backgroundTint="@color/colorPrimary"
        android:text="@string/change_password"
        android:textColor="@color/whiteTextColor"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/main_page"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/change_password"
        android:layout_marginBottom="10dp"
        android:onClick="mainpage"
        android:text="Main Page"
        android:textColor="@color/whiteTextColor"
        app:backgroundTint="@color/colorPrimary" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/logout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        app:backgroundTint="#2962FF"
        android:text="@string/logout"
        android:textColor="@color/whiteTextColor"/>

</RelativeLayout>